crates/nexus/tests/compile_fail/domain_event_on_struct.stderr
error: missing required attribute `#[domain_event]`
 --> tests/compile_fail/domain_event_on_struct.rs:5:8
  |
5 | struct NotAnEnum {
  |        ^^^^^^^^^
